[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-loop"
version = "0.1.0"
description = "Zamknięta pętla korekcyjna: czyta gap+watch i sama stosuje poprawną akcję (loop://)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tom Sapletta" }]
dependencies = ["urirun>=0.4.14"]

[project.entry-points."urirun.bindings"]
loop = "urirun_connector_loop.core:urirun_bindings"

[tool.setuptools.packages.find]
include = ["urirun_connector_loop*"]
